tests/Fase2-Semantic/error/t33-while_condition_not_boolean.ctds
class aux {

}

class main {
    integer x;
    

    integer add( integer b){
        integer a;
        a = x+b;
        while (a) break;
        return a;
    }

    void main(){
        x=0;
        add(2);
    }
    
}
